--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,8 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2
+      - name: Install dependencies
+        run: npm ci
       - name: Build
         run: npm run build
       - name: Deploy 🚀
